@@ -2,6 +2,7 @@ v3.0.9 - in progress
 	* Fixed high baudrate corruption issues
 	* Added a timestamp from clock_gettime() to all incoming packets
 	* Fixed broken ifdef around timespec definition
+	* Improved performance when locating a Frame ID
 
 v3.0.8 - 24 Dec 2012
 	* Fixed analog input values
